[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langgraph>=1.0.0a3",
    "langgraph-cli[inmem]>=0.4.2",
    "python-dotenv>=1.1.1",
]
